--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "singleQuote": true,
   "jsxBracketSameLine": false,
   "semi": false,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "prettier.semi": false
 }
